[package]
name = "zufall"
description = "Zufall, a tool to help on decisions."
version = "3.2.0-rolling"
authors = ["rusty-snake"]
license = "MIT"
edition = "2021"

[dependencies]
rand = "0.8"
clap = { version = "3.2.22", features = ["derive", "wrap_help"] }
gtk = { version = "0.15.5", features = ["v3_24"] }
